# LgAimers6_online-hackerton

./: .gitignore  CatBoost.ipynb  FertiMind팀ppt.pptx  LGBMClassifier.ipynb  README.md  [Baseline]_ExtraTrees를 이용한 임신 성공 여부 확률 예측.ipynb  baseline_submit.csv
Final_FertiMind_dacon/: Final_code_FertiMind.ipynb
Final_FertiMind_dacon/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
Final_FertiMind_dacon/lgbm_parameter/: lgbm_params_minsu_trial_180_1.json  lgbm_params_minsu_trial_200_1.json
Final_FertiMind_dacon/weight_now_best_for_ensemble/: cat_fold_gpu0.cbm  cat_fold_gpu3.cbm  cat_fold_gpu4.cbm  cat_fold_gpu5.cbm  cat_fold_gpu7.cbm  cat_fold_gpu8.cbm  cat_fold_gpu9.cbm
Final_FertiMind_dacon/weight_now_best_solo_first/: cat_fold_gpu0.cbm  cat_fold_gpu1.cbm  cat_fold_gpu3.cbm  cat_fold_gpu4.cbm  cat_fold_gpu5.cbm  cat_fold_gpu7.cbm  cat_fold_gpu8.cbm  cat_fold_gpu9.cbm
Minsu/: CODE_recent git.ipynb  CODE_recent.ipynb  MS.ipynb  Minsu_new.ipynb.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
hantaek/: EDA.ipynb  EDA2.ipynb  EDA3.ipynb  cat_lgbm_dl_ensemble.py.py  exp1.ipynb  lgbm_exp.py  lgbm_predict.py  pyproject.toml
sunghyun/: CODE_yb (1).ipynb  CODE_yb.ipynb  CatBoost.ipynb  ExtraTreesClassifier.ipynb  XGBoost.ipynb  baseline_submit.csv  cat_cpu_params.json  requirements.txt  sunghyun_catboost+log.csv
sunghyun/weight/: cat_fold_cpu1.cbm  (+6 more)
yunbyeong/: CODE_yb (1).ipynb  CODE_yb.ipynb  CODE_yb_new.ipynb
(+142 files in other folders)
