[project]
name = "fertimind"
version = "0.1.0"
description = ""
authors = [
    {name = "hantaek",email = "lht92229@gmail.com"}
]
package-mode = false

requires-python = ">=3.11,<4.0"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (<2.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ace-tools (>=0.0,<0.1)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "catboost (>=1.2.7,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "torch (>=2.6.0,<3.0.0)",
    "imblearn (>=0.0,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
